# asd1

./: .gitignore  README.md  pyproject.toml
core/: .gitignore  README.md  pyproject.toml
core/src/asd/: core.py
core/tests/: alksjd_test.py
sandbox/: __workspace__.toml
sandbox/buildkit/: pyproject.toml
sandbox/buildkit/buildkit/: __init__.py
sandbox/subdomain2/project21/: __project__.py
src/asd/: __init__.py  api.py  bind.py  cli.py  core.py  runner.py  server.py
src/asd/backend/: __init__.py  __main__.py  cli.py
src/asd/backend/tasks/: planner.py  repo.py  runner.py  service.py
src/asd/dls/: __init__.py
src/asd/dsl/: __init__.py
src/asd/frontend/: __init__.py  __main__.py  cli.py  client.py  dispatcher.py  venv_manager.py
src/asd/frontend/commands/: env.py  plan.py  query.py  run.py
src/asd/kernel/: __init__.py  bind.py
tests/: fake_projects.py  main_test.py  projects_test.py
