[tool.poetry]
name = "asd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages=[{include="asd",from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
injector = "^0.21.0"
wcmatch = "^8.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
